--- a/style.css
+++ b/style.css
@@ -452,19 +452,19 @@ header ul li ul li{
     margin-top: 40px;
 }
 
-.slide{
+/* .slide{
     width:1200px;
     padding: 10px;
     margin:109px 0px 0px 136px;
-}
+} */
 
-.p-cont .slide{
+/* .p-cont .slide{
     opacity: 0;
 }
 
 .p-cont .slide:hover{
     opacity: 1;
-}
+} */
 
 
 /* OUR PRODUCT END */
